--- a/about.html
+++ b/about.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 
+<!---Beginning of page content--->
+    <nav> 
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipe.html">Recipe</a></li>
+        </ul>
+    </nav>
+<!---End of navigation--->
+
     <h1>Julisbeth Negron</h1>
     <p>Write a paragraph about yourself.</p>
 
@@ -23,6 +33,8 @@
         <li><strong>Sorullos</strong></li>
         <li>Rice</li>
     </ol>
-    
+
+<!---End of page content--->
+
 </body>
 </html>
