--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Home</title>
 </head>
 <body>
-    
+
+<!---Beginning of page content--->
+    <nav> 
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="recipe.html">Recipe</a></li>
+        </ul>
+    </nav>
+<!---End of navigation--->
+
     <h1>My Web Design Journey</h1>
     <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em>personal and creative reasons</em>.</p>
     
@@ -16,6 +26,8 @@
         <li>Assignment 1: index.html</li>
         <li>Assignment 1: about.html</li>
     </ul>
+
+<!---End of page content--->
 
 </body>
 </html>
