--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <ul>
         <li>Assignment 1: index.html</li>
         <li>Assignment 1: about.html</li>
+        <li>Assignment 2: recipe.html</li>
     </ul>
 
 <!---End of page content--->
