--- a/index.html
+++ b/index.html
@@ -17,17 +17,30 @@
     </nav>
 <!---End of navigation--->
 
-    <h1>My Web Design Journey</h1>
+    <h1 id="top">My Web Design Journey</h1>
     <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em>personal and creative reasons</em>.</p>
-    
+
     <h2>Class Assignments</h2>
     <p>This web page will hold links to my class assignments.</p>
-    <ul>
-        <li>Assignment 1: index.html</li>
-        <li>Assignment 1: about.html</li>
-        <li>Assignment 2: recipe.html</li>
-    </ul>
+    <section>
+        <ul>
+            <li><a href="index.html"></a>Assignment 1 &mdash; index.html</li>
+            <li><a href="about.html"></a>Assignment 2 &mdash; about.html</li>
+            <li><a href="recipe.html"></a>Assignment 3 &mdash; recipe.html</li>
+            <li>Assignment 4 &mdash; Netlify Site URL</li>
+        </ul>
+    </section>
 
+<!-- Footer *comment made using emmet shortcut -->
+<hr>
+    <footer>
+        <p>Julisbeth Negron-Carrasquillo &copy;</p><br>
+        <p><a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a></p><br>
+        <p><a href="tel:+12345678901">(234) 567-8901</a></p><br>
+        <p><a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></p>
+    </footer>
+
+<p><a href="#top">Top of Page</a></p>
 <!---End of page content--->
 
 </body>
