--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     </nav>
 <!---End of navigation--->
 
-    <h1>Julisbeth Negron</h1>
+    <h1>Julisbeth Negron-Carrasquillo</h1>
     <p>I spend a lot of my free time playing The Sims 4 and Animal Crossing New Horizons; they're both very relaxing games that're perfect for my resting times. If there's one thing my friends would probably never forget, it's that I am an avid coffee drinker. My day's are simply incomplete without it. Anime has been a favorite genre of mine since I was a younger child; I've seen so many, it's hard to keep track.</p>
     <p>Generally though, I am just your average young adult person who's on a journey toward discovering my career path. I've always hated the question, "what're you studying?" I don't know. Not knowing is okay.</p>
 
