--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <!---Beginning of page content--->
     <nav> 
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="recipe.html">Recipe</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/recipe.html">Recipe</a></li>
+            <li><a href="/form.html">Form</a></li>
         </ul>
     </nav>
 <!---End of navigation--->
@@ -24,10 +25,11 @@
     <p>This web page will hold links to my class assignments.</p>
     <section>
         <ul>
-            <li><a href="index.html"></a>Assignment 1 &mdash; index.html</li>
-            <li><a href="about.html"></a>Assignment 2 &mdash; about.html</li>
-            <li><a href="recipe.html"></a>Assignment 3 &mdash; recipe.html</li>
+            <li><a href="/index.html"></a>Assignment 1 &mdash; index.html</li>
+            <li><a href="/about.html"></a>Assignment 2 &mdash; about.html</li>
+            <li><a href="/recipe.html"></a>Assignment 3 &mdash; recipe.html</li>
             <li>Assignment 4 &mdash; Netlify Site URL</li>
+            <li><a href="/form.html"></a>Assignment 5 &mdash; form.html</li>
         </ul>
     </section>
 
