--- a/recipe.html
+++ b/recipe.html
@@ -11,9 +11,10 @@
 <!---Beginning of page content--->
     <nav> 
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="recipe.html">Recipe</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/recipe.html">Recipe</a></li>
+            <li><a href="/form.html">Form</a></li>
         </ul>
     </nav>
 <!---End of navigation--->
