--- a/about.html
+++ b/about.html
@@ -4,38 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+<!---External stylesheet--->
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 <body>
 
 <!---Beginning of page content--->
-    <nav> 
+    <nav id="main-nav"> 
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/recipe.html">Recipe</a></li>
-            <li><a href="/form.html">Form</a></li>
+            <li class="pages"><a href="/index.html">Home</a></li>
+            <li class="pages"><a href="/about.html">About</a></li>
+            <li class="pages"><a href="/recipe.html">Recipe</a></li>
+            <li class="pages"><a href="/form.html">Form</a></li>
         </ul>
     </nav>
 <!---End of navigation--->
 
-    <h1>Julisbeth Negron-Carrasquillo</h1>
+    <h1 id="return">Julisbeth Negron-Carrasquillo</h1>
     <p>I spend a lot of my free time playing The Sims 4 and Animal Crossing New Horizons; they're both very relaxing games that're perfect for my resting times. If there's one thing my friends would probably never forget, it's that I am an avid coffee drinker. My day's are simply incomplete without it. Anime has been a favorite genre of mine since I was a younger child; I've seen so many, it's hard to keep track.</p>
     <p>Generally though, I am just your average young adult person who's on a journey toward discovering my career path. I've always hated the question, "what're you studying?" I don't know. Not knowing is okay.</p>
 
     <h2>My Hobbies</h2>
-    <ol>
+    <ol class="favorites">
         <li>Digital custom content creation</li>
         <li>Painting and other forms of creative expression</li>
-        <li>Watching new movies and shows, <strong>specifically animes</strong></li>
+        <li>Watching new movies and shows, <strong class="strong">specifically animes</strong></li>
     </ol>
 
     <h2> Favorite Foods</h2>
-    <ol>
+    <ol class="favorites">
         <li>Empanadillas</li>
-        <li><strong>Sorullos</strong></li>
+        <li><strong class="strong">Sorullos</strong></li>
         <li>Rice</li>
     </ol>
 
+<!-- Footer *comment made using emmet shortcut -->
+    <hr>
+    <footer id="footer">
+        <h3>Contact Information</h3>
+        <p>Julisbeth Negron-Carrasquillo &copy;</p><br>
+        <p><a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a></p><br>
+        <p><a href="tel:+12345678901">(234) 567-8901</a></p><br>
+        <p><a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></p>
+    </footer>
+
+<p id="top"><a href="#return">Top of Page</a></p>
 <!---End of page content--->
 
 </body>
