--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+<!---External stylesheet, **preferred method--->
+    <link rel="stylesheet" href="/css/index.css">
+<!---Embedded stylesheet
+    <style>
+        body {
+            background-color: #######;
+        }
+    </style>
+---->
 </head>
+
+<!---Inline stylesheet
+<body style="background-color: #######;>
+**Method not prefered---->
+
 <body>
 
 <!---Beginning of page content--->
-    <nav> 
+    <nav id="main-nav"> 
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/recipe.html">Recipe</a></li>
-            <li><a href="/form.html">Form</a></li>
+            <li class="pages"><a href="/index.html">Home</a></li>
+            <li class="pages"><a href="/about.html">About</a></li>
+            <li class="pages"><a href="/recipe.html">Recipe</a></li>
+            <li class="pages"><a href="/form.html">Form</a></li>
         </ul>
     </nav>
 <!---End of navigation--->
 
-    <h1 id="top">My Web Design Journey</h1>
-    <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em>personal and creative reasons</em>.</p>
+    <h1 id="return">My Web Design Journey</h1>
+    <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em class="em">personal and creative reasons</em>.</p>
 
     <h2>Class Assignments</h2>
     <p>This web page will hold links to my class assignments.</p>
@@ -30,19 +44,21 @@
             <li><a href="/recipe.html"></a>Assignment 3 &mdash; recipe.html</li>
             <li>Assignment 4 &mdash; Netlify Site URL</li>
             <li><a href="/form.html"></a>Assignment 5 &mdash; form.html</li>
+            <li><a href="/css/"></a>Assignment 6 &mdash; CSS Folder</li>
         </ul>
     </section>
 
 <!-- Footer *comment made using emmet shortcut -->
 <hr>
-    <footer>
+    <footer id="footer">
+        <h3>Contact Information</h3>
         <p>Julisbeth Negron-Carrasquillo &copy;</p><br>
         <p><a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a></p><br>
         <p><a href="tel:+12345678901">(234) 567-8901</a></p><br>
         <p><a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></p>
     </footer>
 
-<p><a href="#top">Top of Page</a></p>
+<p id="top"><a href="#return">Top of Page</a></p>
 <!---End of page content--->
 
 </body>
