Assignments and footer code fixed

--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
     <hr>
     <footer id="footer">
         <h3>Contact Information</h3>
-        <p>Julisbeth Negron-Carrasquillo &copy;</p><br>
-        <p><a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a></p><br>
-        <p><a href="tel:+12345678901">(234) 567-8901</a></p><br>
-        <p><a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></p>
+        Julisbeth Negron-Carrasquillo &copy;<br>
+        <a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a><br>
+        <a href="tel:+12345678901">(234) 567-8901</a><br>
+        <a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a>
     </footer>
 
 <p id="top"><a href="#return">Top of Page</a></p>
