--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <p>This web page will hold links to my class assignments.</p>
     <section>
         <ul>
-            <li><a href="/index.html"></a>Assignment 1 &mdash; index.html</li>
-            <li><a href="/about.html"></a>Assignment 2 &mdash; about.html</li>
-            <li><a href="/recipe.html"></a>Assignment 3 &mdash; recipe.html</li>
-            <li>Assignment 4 &mdash; Netlify Site URL</li>
-            <li><a href="/form.html"></a>Assignment 5 &mdash; form.html</li>
-            <li><a href="/css/"></a>Assignment 6 &mdash; CSS Folder</li>
+            <li><a href="/index.html">Assignment 1 &mdash; index.html</a></li>
+            <li><a href="/about.html">Assignment 2 &mdash; about.html</a></li>
+            <li><a href="/recipe.html">Assignment 3 &mdash; recipe.html</a></li>
+            <li><a href="https://vigilant-jackson-caa370.netlify.app/">Assignment 4 &mdash; Netlify Site URL</a></li>
+            <li><a href="/form.html">Assignment 5 &mdash; form.html</a></li>
+            <li><a href="/css/">Assignment 6 &mdash; CSS Folder</a></li>
         </ul>
     </section>
 
@@ -52,10 +52,10 @@
 <hr>
     <footer id="footer">
         <h3>Contact Information</h3>
-        <p>Julisbeth Negron-Carrasquillo &copy;</p><br>
-        <p><a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a></p><br>
-        <p><a href="tel:+12345678901">(234) 567-8901</a></p><br>
-        <p><a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></p>
+        Julisbeth Negron-Carrasquillo &copy;<br>
+        <a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a><br>
+        <a href="tel:+12345678901">(234) 567-8901</a><br>
+        <a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a>
     </footer>
 
 <p id="top"><a href="#return">Top of Page</a></p>
