--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 <body>
 
 <!---Beginning of page content--->
+    <div class="icon-row1">
+        <!-- Attribution
+            <a href="https://commons.wikimedia.org/wiki/File:Antu_application-x-javascript.svg">Fabián Alexis</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons
+        -->
+    </div>
+
+
     <nav id="main-nav"> 
         <ul>
             <li class="pages"><a href="/index.html">Home</a></li>
@@ -32,12 +39,21 @@
     </nav>
 <!---End of navigation--->
 
-    <h1 id="return">My Web Design Journey</h1>
-    <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em class="em">personal and creative reasons</em>.</p>
+<!--Header-->
+    <header>
+        <p><span class="work-pic">Photo by <a href="https://unsplash.com/@nickmorrison?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nick Morrison</a> on <a href="https://unsplash.com/s/photos/coffee?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span></p>
+    </header>
+<!--End of header-->
 
-    <h2>Class Assignments</h2>
-    <p>This web page will hold links to my class assignments.</p>
-    <section>
+    <section class="section1">
+        <h1 id="return">My Web Design Journey</h1>
+
+        <p>Through taking this web design class, I am hoping to learn the foundation of how to design a functional website. I do not currently have any intention of pursuing web design in a career setting, however that may change as I go. As of now, I am interested for <em class="em">personal and creative reasons</em>.</p>
+    </section>
+
+    <section class="section2">
+        <h2>Class Assignments</h2>
+        <p>This web page will hold links to my class assignments.</p>
         <ul>
             <li><a href="/index.html">Assignment 1 &mdash; index.html</a></li>
             <li><a href="/about.html">Assignment 2 &mdash; about.html</a></li>
@@ -52,10 +68,7 @@
 <hr>
     <footer id="footer">
         <h3>Contact Information</h3>
-        Julisbeth Negron-Carrasquillo &copy;<br>
-        <a href="mailto:jnegr0044@mail.ct.edu">jnegr0044@mail.ct.edu</a><br>
-        <a href="tel:+12345678901">(234) 567-8901</a><br>
-        <a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a>
+        <span>Julisbeth Negron-Carrasquillo &copy; &#124; <a href="mailto:jnegr0044@mail.ct.edu" title="jnegr0044@mail.ct.edu">Email</a> &#124; <a href="tel:+12345678901" title="(234) 567-8901">Phone</a> &#124; <a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></span>
     </footer>
 
 <p id="top"><a href="#return">Top of Page</a></p>
