--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         -->
     </div>
 
-
+<!--- Navigation --->
     <nav id="main-nav"> 
         <ul>
             <li class="pages"><a href="/index.html">Home</a></li>
@@ -37,14 +37,13 @@
             <li class="pages"><a href="/form.html">Form</a></li>
         </ul>
     </nav>
-<!---End of navigation--->
 
-<!--Header-->
+<!--- Header --->
     <header>
         <p><span class="work-pic">Photo by <a href="https://unsplash.com/@nickmorrison?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nick Morrison</a> on <a href="https://unsplash.com/s/photos/coffee?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span></p>
     </header>
-<!--End of header-->
 
+<!--- Content --->
     <section class="section1">
         <h1 id="return">My Web Design Journey</h1>
 
@@ -64,7 +63,7 @@
         </ul>
     </section>
 
-<!-- Footer *comment made using emmet shortcut -->
+<!--- Footer *comment made using emmet shortcut --->
 <hr>
     <footer id="footer">
         <h3>Contact Information</h3>
