--- a/form.html
+++ b/form.html
@@ -20,6 +20,7 @@ Photo by <a href="https://unsplash.com/@robertbye?utm_source=unsplash&utm_medium
                 <li class="pages"><a href="/about.html">About</a></li>
                 <li class="pages"><a href="/recipe.html">Recipe</a></li>
                 <li class="pages"><a href="/form.html">Form</a></li>
+                <li class="pages"><a href="/flex-grid.html">Flex-Grid</a></li>
             </ul>
         </nav>
 
