--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li class="pages"><a href="/about.html">About</a></li>
                 <li class="pages"><a href="/recipe.html">Recipe</a></li>
                 <li class="pages"><a href="/form.html">Form</a></li>
+                <li class="pages"><a href="/flex-grid.html">Flex-Grid</a></li>
             </ul>
         </nav>
     
@@ -71,6 +72,7 @@
                 <li><a href="/css/">Assignment 6 &mdash; CSS Folder</a></li>
                 <li><a href="/">Assignment 7 &mdash; The Box Model</a></li>
                 <li><a href="/">Assignment 8 &mdash; Google Fonts, Float, Favicon</a></li>
+                <li><a href="/flex-grid.html">Assignment 9 &mdash; Flexbox & Grid</a></li>
             </ul>
         </section>
     
