--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                 <li class="pages"><a href="/about.html">About</a></li>
                 <li class="pages"><a href="/recipe.html">Recipe</a></li>
                 <li class="pages"><a href="/form.html">Form</a></li>
+                <li class="pages"><a href="/flex-grid.html">Flex-Grid</a></li>
             </ul>
         </nav>
 
