Files added and coded

--- a/flex-grid.html
+++ b/flex-grid.html
@@ -41,8 +41,8 @@
         <!-- PAGE CONTENT -->
 
         <article class="row1-left">
-            <img src="/img/sunset-room-350px.png" alt="sunset lighting in a room">
-            <!-- Photo by <a href="https://unsplash.com/@okeykat?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">okeykat</a> on <a href="https://unsplash.com/s/photos/sunset-room?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+            <figure><img src="/img/sunset-room-350px.png" alt="sunset lighting in a room"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@okeykat?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">okeykat</a> on <a href="https://unsplash.com/s/photos/sunset-room?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption>
         </article>
 
         <article class="row2-left">
@@ -50,8 +50,8 @@
         </article>
 
         <article class="row1-middle">
-            <img src="/img/candle-350px.png" alt="lit candle">
-            <!-- Photo by <a href="https://unsplash.com/@fu_psi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hanna Balan</a> on <a href="https://unsplash.com/s/photos/candles-flame?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+            <figure><img src="/img/candle-350px.png" alt="lit candle"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@fu_psi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Hanna Balan</a> on <a href="https://unsplash.com/s/photos/candles-flame?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption>
         </article>
 
         <article class="row2-middle">
@@ -59,7 +59,9 @@
         </article>
 
         <article class="row1-right">
-            <img src="/img/workspace-350px.png" alt="workspace desk">
+            <figure><img src="/img/workspace-350px.png" alt="workspace desk"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@andrewtneel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andrew Neel</a> on <a href="https://unsplash.com/s/photos/desk?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </figcaption>
         </article>      
         
         <article class="row2-right">
@@ -68,8 +70,8 @@
 
 
         <article class="row3-left">
-            <img src="/img/pumpkin-350px.png" alt="jackolantern">
-            <!-- Photo by <a href="https://unsplash.com/@szabojani?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Szabó János</a> on <a href="https://unsplash.com/s/photos/halloween?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+            <figure><img src="/img/pumpkin-350px.png" alt="jackolantern"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@szabojani?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Szabó János</a> on <a href="https://unsplash.com/s/photos/halloween?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption>
         </article>
 
         <article class="row4-left">
@@ -77,8 +79,8 @@
         </article>
 
         <article class="row3-middle">
-            <img src="/img/goat-350px.png" alt="goat silhouettes">
-            <!-- Photo by <a href="https://unsplash.com/@yoanndonze?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Yoann Donzé</a> on <a href="https://unsplash.com/s/photos/goat?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+            <figure><img src="/img/goat-350px.png" alt="goat silhouettes"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@yoanndonze?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Yoann Donzé</a> on <a href="https://unsplash.com/s/photos/goat?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></figcaption>
         </article>
 
         <article class="row4-middle">
@@ -86,7 +88,9 @@
         </article>
 
         <article class="row3-right">
-            <img src="/img/decorated-candles-350px.png" alt="decorated candles">
+            <figure><img src="/img/decorated-candles-350px.png" alt="decorated candles"></figure>
+            <figcaption>photo by <a href="https://unsplash.com/@olgaserjantu?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Olga Serjantu</a> on <a href="https://unsplash.com/collections/1663771/magick?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            </figcaption>
         </article>      
         
         <article class="row4-right">
