Files added and coded

--- a/flex-grid.html
+++ b/flex-grid.html
@@ -94,7 +94,7 @@
         </article>      
         
         <article class="row4-right">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Velit laoreet id donec ultrices tincidunt arcu non sodales...</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Velit laoreet id donec ultrices tincidunt arcu non...</p>
         </article>
 
         <!-- FOOTER -->
