--- a/recipe.html
+++ b/recipe.html
@@ -90,7 +90,7 @@
     <!--- Nutrition Facts --->
         <h3 id="nutrition">Nutrition Facts</h3>
         <div class="nutrition-info">
-            <p>Per Serving: 379 calories; protein 5.9g; carbohydrates 30.5g; fat 14.3g; cholesterol 64mg; sodium 352.1mg.</p>
+            <p><u>Per Serving:</u> 379 calories; protein 5.9g; carbohydrates 30.5g; fat 14.3g; cholesterol 64mg; sodium 352.1mg.</p>
         </div>
     
     <!--- Video Embed --->
