Files edited (transitions/animations)

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
     <!--Bio-->
     
-        <h1 id="return">Julisbeth Negron-Carrasquillo</h1>
+        <h1 id="return" class="name">Julisbeth Negron-Carrasquillo</h1>
 
         <img class="bio-pic" src="/img/rukia.jpg" alt="Rukia from the Bleach anime">
 
@@ -76,7 +76,10 @@
             <span>Julisbeth Negron-Carrasquillo &copy; &#124; <a href="mailto:jnegr0044@mail.ct.edu" title="jnegr0044@mail.ct.edu">Email</a> &#124; <a href="tel:+12345678901" title="(234) 567-8901">Phone</a> &#124; <a href="https://vigilant-jackson-caa370.netlify.app/">My Web Design Journey</a></span>
         </footer>
         <p id="top"><a href="#return">Top of Page</a></p>
-    
+
+    <!-- -prefix-free library mentioned in week 12's videos -->
+    <script src="https://www.kirupa.com/js/prefixfree.min.js"></script>  
+
 </div>
 <!---End--->
 </body>
